Implemented wip data flow for item
