# setok-dotnet/setok.webapi/Models/ItemDto.cs
@@ -1,0 +1,10 @@
+public class ItemDto
+{
+    public int Id { get; set; }
+    public string Name { get; set; }
+    public string Description { get; set; }
+    public decimal Price { get; set; }
+    public int Quantity { get; set; }
+    public string Image { get; set; }
+    public string Category { get; set; }
+}
