# setok-dotnet/setok.webapi/swagger.yml
@@ -47,8 +47,164 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/SetokResult'
+  /Item:
+    get:
+      tags:
+        - Item
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ItemDto'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ItemDto'
+            text/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ItemDto'
+    post:
+      tags:
+        - Item
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemDto'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/ItemDto'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/ItemDto'
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+  '/Item/{id}':
+    get:
+      tags:
+        - Item
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+    put:
+      tags:
+        - Item
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemDto'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/ItemDto'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/ItemDto'
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+    delete:
+      tags:
+        - Item
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
 components:
   schemas:
+    ItemDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+          nullable: true
+        description:
+          type: string
+          nullable: true
+        price:
+          type: number
+          format: double
+        quantity:
+          type: integer
+          format: int32
+        image:
+          type: string
+          nullable: true
+        category:
+          type: string
+          nullable: true
+      additionalProperties: false
     Message:
       type: object
       properties:
